--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
         if: ${{ steps.cache_gorgon.outputs.cache-hit != 'true'}}
         run: |
           hg clone https://repo.darkgaze.org/Gorgon/
+          hg checkout 4.x-dev
           cd Gorgon/
           mkdir build
           cd build 
