--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       
       - name: Build gorgon dependencies
         run: |
-          sudo apt-get install -y gcc cmake cmake-gui libx11-dev libxinerama-dev libxrandr-dev libxtst-dev doxygen freetype2-demos libfifechan-dev libfreetype6-dev libpulse-dev libfontconfig1-dev libflac-dev libvorbis-dev
+          sudo apt-get install -y gcc cmake cmake-gui libgl1-mesa-dev libx11-dev libxinerama-dev libxrandr-dev libxtst-dev doxygen freetype2-demos libfifechan-dev libfreetype6-dev libpulse-dev libfontconfig1-dev libflac-dev libvorbis-dev
           sudo apt-get install -y ssh mercurial 
 
       # Cache Gorgon 
