--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           cd build 
           cmake ..
           make -j8
-          sudo make install
+          sudo cmake --install .
 
       - name: Create executable
         working-directory: .
