Cmake install state added

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,10 @@ jobs:
           cmake ..
           make -j8
           sudo cmake --install .
+      - name: Gorgon install cmake
+        run: |
+          cd Gorgon/build
+          sudo cmake --install .
 
       - name: Create executable
         working-directory: .
