Unit tests done

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,4 +62,4 @@ jobs:
       - name: Run ctest
         working-directory: ./build
         run: |
-          sudo ctest
+          sudo ctest --verbose
