--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/Bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Bin)
 
-# Gorgon package required for image processing part
-find_package(Gorgon REQUIRED)
 
 # opencv  package
 find_package(OpenCV REQUIRED )
@@ -20,7 +18,7 @@ include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 add_compile_options(-std=c++17)
 
-add_executable(${PROJECT_NAME} 
+add_executable(${PROJECT_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/Source/Main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Source/Processing/Ctar.hpp
 
@@ -29,11 +27,10 @@ add_executable(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
 
-linkgorgon(${PROJECT_NAME})
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Source/)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Tests/)
+# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Tests/)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
